2005-01-28  lav

	* chset.cc: (set_chset_no8bit) new function.
	* undo.cc, undo.h: don't glue changes together after a pause.

2005-01-04  lav

	* chset.cc, screen.cc: better check for wc printability; don't use
	  mvaddchnstr in cursesw - it's broken.

2004-12-30  lav

	* getch.cc: workaround KEY_F definition from linux/keyboard.h
	* window.cc: add code for displaying invalid wchars.

2004-12-22  lav

	* block.cc, chset.cc, edit.cc, edit.h, mb.h, window.h, kern.cc: fix compilation
	  without wide chars; check for wide chars and if present go to mb_mode.

2004-12-08  lav

	* edit.cc: initialize newname properly.

2004-10-14  lav

	* user.cc: add .cpp and .cxx extensions for line commenting.

2004-09-20  lav

	* getstr.cc: choose wide char in mb_mode.

2004-08-19  lav

	* search.cc: prevent original pattern being corrupted by strtok.

2004-08-11  lav

	* getstr.cc: fixed display of long input lines.

2004-06-08  lav

	* keymap.cc: don't show shortcut if corresponding key in terminfo
	  is not defined; tune control-shift-Fx scores.
	* keymapdf.cc: add kspd binding to suspend-editor.

2004-06-04  lav

	* user.cc: initialize newname in load and save-as.
	* keymapdf.cc: add kUND, krdo, kRDO key bindings.
	* kern.cc: (ReplaceBlock) mark buffer modified when not mmapped.

2004-05-20  lav

	* undo.cc: fixed malloc(0) and memory allocation error handling;
	  clear group_head in Clear.
	* user.cc: call undelete if undo is disabled.
	* keymapdf.cc: call undo on ^U and kund.

2004-05-19  lav

	* undo.h, undo.cc: (GroupHead) new class; save block positions there.
	* kern.cc: clear undo when emptying text buffer.
	* mainmenu.cc: leave bare minimum - the menu is loaded from file.
	* keymap.cc, keymap.h, keymapfn.cc, keymapdf.cc, user.cc, user.h:
	  make automatic decision to input a byte or a wchar in
	  choose-character and insert-char-by-code; add corresponding byte
	  actions.
	* edit.cc: remove "no undo" message.
	* screen.cc: use more compatible getyx instead of getcurx.
